[package]
name = "material_you_palette"
version = "0.1.0"
edition = "2021"
license-file = "./LICENSE"
description = "A 'faithful' port of the material-color-utilities project."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.0"
lazy_static = "1.4.0"
hex = "0.4.2"

[dev-dependencies]
assert_approx_eq = "1.1.0"
