[package]
name = "pymonet"
license-file = "../LICENSE"
version = "0.1.0"
edition = "2021"
description = "A port of the material-color-utilities in python written in rust"

[lib]
name = "pymonet"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.2", features = ["extension-module"] }
ahash = "0.8.0"
lazy_static = "1.4.0"
hex = "0.4.2"

[dev-dependencies]
assert_approx_eq = "1.1.0"

[profile.release]
strip = true
opt-level = "s"
lto = true